data/cloudformation_collected_templates_new/template_17400_lime-compiler-cloudformation.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Creates the LimeCompiler from CloudFormation and Runs a Build
Resources:
  LimeCompilerInternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: LimeCompiler-Pony-Type
          Value: LimeCompiler
  LimeCompilerVPC:
    Type: "AWS::EC2::VPC"
    DependsOn: LimeCompilerInternetGateway
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: True
      EnableDnsHostnames: True
      Tags:
        - Key: LimeCompiler-Pony-Type
          Value: LimeCompiler
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    DependsOn: LimeCompilerVPC
    Properties:
      VpcId:
        Ref: LimeCompilerVPC
      InternetGatewayId:
        Ref: LimeCompilerInternetGateway
  LimeCompilerSubnet1:
    Type: "AWS::EC2::Subnet"
    DependsOn: LimeCompilerVPC
    Properties:
      AvailabilityZone: "us-west-2a"
      CidrBlock: "10.0.0.0/24"
      MapPublicIpOnLaunch: True
      Tags:
        - Key: LimeCompiler-Pony-Type
          Value: LimeCompiler
      VpcId:
        Ref: LimeCompilerVPC
  LimeCompilerSubnet2:
    Type: "AWS::EC2::Subnet"
    DependsOn: LimeCompilerVPC
    Properties:
      AvailabilityZone: "us-west-2b"
      CidrBlock: "10.0.1.0/24"
      MapPublicIpOnLaunch: True
      Tags:
        - Key: LimeCompiler-Pony-Type
          Value: LimeCompiler
      VpcId:
        Ref: LimeCompilerVPC
  LimeCompilerRouteTable:
    Type: "AWS::EC2::RouteTable"
    DependsOn: LimeCompilerVPC
    Properties:
      VpcId:
        Ref: LimeCompilerVPC
      Tags:
        - Key: LimeCompiler-Pony-Type
          Value: LimeCompiler
  DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: LimeCompilerRouteTable
    Properties:
      RouteTableId:
        Ref: LimeCompilerRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: LimeCompilerInternetGateway
  LimeCompilerSecGroup:
    Type: "AWS::EC2::SecurityGroup"
    DependsOn: LimeCompilerVPC
    Properties:
      GroupDescription: "Allows ports to test instance during LimeCompiler pony run"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: LimeCompiler-Pony-Type
          Value: LimeCompiler
      VpcId:
        Ref: LimeCompilerVPC
  LimeCompilerInstance:
    Type: "AWS::EC2::Instance"
    DependsOn: LimeCompilerSecGroup
    Properties:
      AvailabilityZone: 'us-west-2b'
      ImageId: ami-0ce3586c
      IamInstanceProfile: lime-compiler
      InstanceInitiatedShutdownBehavior: terminate
      InstanceType: m4.large
      KeyName: roger
      SecurityGroupIds:
        - Ref: LimeCompilerSecGroup
      SubnetId:
        Ref: LimeCompilerSubnet2
      #UserData: IyEvYmluL2Jhc2gKc2V0IC1lIC14CgovaG9tZS9mZWRvcmEvMDAtdGFncy0xMC1lbnYuc2gKL2hvbWUvZmVkb3JhLzAxLXN5bmMuc2gKL2hvbWUvZmVkb3JhLzAyLWJ1aWxkLnNoCg==
      Tags:
        - Key: GPG_FINGERPRINT
          Value: '80DA92CB09161F241C8F9BC918BA980367172B17'
        - Key: GPG_HOME
          Value: 'build_gpg_home'
        - Key: GPG_SIGN
          Value: 0
        - Key: KMS_REGION
          Value: 'us-west-2'
        - Key: S3_REGION
          Value: 'us-west-2'
        - Key: AES_KEY_EXPORT_PATH
          Value: 's3://threatresponse.limecompiler.configs/aes_export.aes'
        - Key: GPG_KEY_EXPORT_PATH
          Value: 's3://threatresponse.limecompiler.configs/gpg_export.aes'
        - Key: CostCenter
          Value: LimeCompiler
Outputs:
  InstancePublicIp:
    Value:
      "Fn::GetAtt": [ LimeCompilerInstance, PublicIp ]
